--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,4 +1,32 @@
 ﻿@page "/"
-
 <h1>Kostenko Dmytro</h1>
 <h2>Nr albumu: 112540</h2>
+<h3>Todo (@todos.Count(todo => !todo.IsDone))</h3>
+<ul>
+    @foreach (var todo in todos)
+    {
+        <li>
+            <input type="checkbox" @bind="todo.IsDone" />
+            <input type="text" @bind="todo.Title" />
+        </li>
+    }
+</ul>
+
+<input type="text" placeholder="todo title" @bind="newTodo" />
+<button type="button" @onclick="AddTodo">Add Todo</button>
+
+@code {
+    private IList<TodoItem> todos = new List<TodoItem>();
+    private string newTodo;
+    private void AddTodo()
+    {
+        if (!string.IsNullOrEmpty(newTodo))
+        {
+            todos.Add(new TodoItem()
+            {
+                Title = newTodo
+            });
+            newTodo = "";
+        }
+    }
+}
